HT/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: gcr.io/usac-nginx-cluster/go-app
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  type: LoadBalancer
  ports:
    - port: 80          # Puerto expuesto al público
      targetPort: 8080  # Puerto donde tu contenedor escucha
  selector:
    app: go-app  # Debe coincidir con las etiquetas del pod
