HT/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  type: LoadBalancer
  ports:
    - port: 80          # Puerto expuesto al público
      targetPort: 8080  # Puerto donde tu contenedor escucha
  selector:
    app: go-app  # Debe coincidir con las etiquetas del pod
